add_executable(sourcemeta_alterschema_unit
  bundle_test.cc rule_test.cc sample_rules.h sample_resolver.h)
target_link_libraries(sourcemeta_alterschema_unit PRIVATE gtest_main)
target_link_libraries(sourcemeta_alterschema_unit PRIVATE sourcemeta_alterschema)
gtest_discover_tests(sourcemeta_alterschema_unit)
set_target_properties(sourcemeta_alterschema_unit
  PROPERTIES FOLDER "Alterschema")
