add_executable(sourcemeta_jsonbinpack_canonicalizer_unit
  canonicalizer_test.cc
  2020_12_canonicalizer_any_test.cc
  2020_12_canonicalizer_array_test.cc
  2020_12_canonicalizer_boolean_test.cc
  2020_12_canonicalizer_null_test.cc
  2020_12_canonicalizer_number_test.cc
  2020_12_canonicalizer_object_test.cc
  2020_12_canonicalizer_string_test.cc)

target_link_libraries(sourcemeta_jsonbinpack_canonicalizer_unit
  PRIVATE GTest::gtest GTest::gtest_main)
target_link_libraries(sourcemeta_jsonbinpack_canonicalizer_unit
  PRIVATE sourcemeta::jsonbinpack::canonicalizer)
target_link_libraries(sourcemeta_jsonbinpack_canonicalizer_unit
  PRIVATE sourcemeta::jsontoolkit::json)
target_link_libraries(sourcemeta_jsonbinpack_canonicalizer_unit
  PRIVATE sourcemeta::jsontoolkit::jsonschema)
gtest_discover_tests(sourcemeta_jsonbinpack_canonicalizer_unit)
set_target_properties(sourcemeta_jsonbinpack_canonicalizer_unit
  PROPERTIES FOLDER "JSON BinPack/Canonicalizer")
