add_executable(sourcemeta_jsonbinpack_encodings_unit
  encoding_traits_test.cc encoding_wrap_test.cc)
target_link_libraries(sourcemeta_jsonbinpack_encodings_unit PRIVATE gtest_main)
target_link_libraries(sourcemeta_jsonbinpack_encodings_unit PRIVATE sourcemeta_jsonbinpack_encoding)
target_link_libraries(sourcemeta_jsonbinpack_encodings_unit PRIVATE sourcemeta::jsontoolkit::json)
gtest_discover_tests(sourcemeta_jsonbinpack_encodings_unit)
