add_executable(sourcemeta_jsonbinpack_mapper_unit
  is_encoding_unit.cc make_encoding_unit.cc
  mapper_test.cc
  2020_12_mapper_any_test.cc
  2020_12_mapper_enum_test.cc
  2020_12_mapper_integer_test.cc
  2020_12_mapper_number_test.cc
  2020_12_states_integer_test.cc)
target_link_libraries(sourcemeta_jsonbinpack_mapper_unit PRIVATE gtest_main)
target_link_libraries(sourcemeta_jsonbinpack_mapper_unit PRIVATE sourcemeta_jsonbinpack_mapper)
target_link_libraries(sourcemeta_jsonbinpack_mapper_unit PRIVATE sourcemeta_jsonbinpack_canonicalizer)
target_link_libraries(sourcemeta_jsonbinpack_mapper_unit PRIVATE sourcemeta::jsontoolkit::json)
gtest_discover_tests(sourcemeta_jsonbinpack_mapper_unit)
set_target_properties(sourcemeta_jsonbinpack_mapper_unit
  PROPERTIES FOLDER "Mapper")
