add_executable(sourcemeta_jsonbinpack_options_unit
  "${PROJECT_SOURCE_DIR}/vendor/googletest/googletest/src/gtest_main.cc"
  options_traits_test.cc options_wrap_test.cc)
target_link_libraries(sourcemeta_jsonbinpack_options_unit PRIVATE gtest)
target_link_libraries(sourcemeta_jsonbinpack_options_unit PRIVATE sourcemeta_jsonbinpack_options)
target_link_libraries(sourcemeta_jsonbinpack_options_unit PRIVATE sourcemeta_jsontoolkit_json)
gtest_discover_tests(sourcemeta_jsonbinpack_options_unit)
